@@ -1,4 +1,0 @@
-/**
- * Provides classes to manage the ecosystem.
- */
-package com.github.qacore.testingtoolbox.managers;
