@@ -1,4 +1,0 @@
-/**
- * Provides classes to support testing patterns.
- */
-package com.github.qacore.testingtoolbox.patterns;
