@@ -1,0 +1,4 @@
+/**
+ * Provides classes to support the Selenium parallel ecosystem.
+ */
+package com.github.qacore.testingtoolbox.selenium.parallel;
