@@ -1,4 +1,4 @@
 /**
  * Provides classes to support <b>Page Object</b> pattern.
  */
-package com.github.qacore.testingtoolbox.patterns.pageobjects;
+package com.github.qacore.testingtoolbox.selenium.support.pageobjects;
