@@ -1,4 +1,4 @@
-package com.github.qacore.testingtoolbox.patterns.pageobjects;
+package com.github.qacore.testingtoolbox.selenium.support.pageobjects;
 
 import static org.junit.Assert.assertEquals;
 
@@ -6,6 +6,8 @@ import org.junit.Test;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.internal.WrapsDriver;
 import org.openqa.selenium.security.UserAndPassword;
+
+import com.github.qacore.testingtoolbox.selenium.support.pageobjects.AbstractLoginPageObjects;
 
 public class AbstractLoginPageObjectsTest {
 
