@@ -1,11 +1,12 @@
-package com.github.qacore.testingtoolbox.patterns.pageobjects;
+package com.github.qacore.testingtoolbox.selenium.support.pageobjects;
 
 import static org.junit.Assert.assertEquals;
 
 import org.junit.Test;
 import org.openqa.selenium.WebDriver;
 
-import com.github.qacore.testingtoolbox.managers.WebDriverManager;
+import com.github.qacore.testingtoolbox.selenium.parallel.WebDriverManager;
+import com.github.qacore.testingtoolbox.selenium.support.pageobjects.PageObjects;
 
 import support.Mock;
 
@@ -26,7 +27,6 @@ public class PageObjectsTest {
         assertEquals(WebDriverManager.getDriverContext().getWrappedDriver(), pageObjects.getWrappedDriver());
 
         WebDriver webDriver = Mock.getWebDriver();
-
         WebDriverManager.setDriver(webDriver);
 
         assertEquals(webDriver, pageObjects.getWrappedDriver());
