@@ -5,6 +5,14 @@ IMPORTANT INCLUSIONS
 
 * com.github.qacore.testingtoolbox.selenium.parallel.ManagedWebDriverContext
 
+IMPORTANT CHANGES
+
+* Moved com.github.qacore.testingtoolbox.patterns.pageobjects.* to com.github.qacore.testingtoolbox.selenium.support.pageobjects.*
+
+OTHER CHANGES
+
+* Now AbstractPageObjects extends ManagedWebDriverContext
+
 v1.1.2 (2017-06-12)
 ======
 
